cmake_minimum_required(VERSION 3.5.1)

set(CMAKE_CXX_STANDARD 11)

# abbreviation for unix programming course
project(upc)

add_subdirectory(00-introduction)
add_subdirectory(03-file-operations)
add_subdirectory(04-sockets)
add_subdirectory(05-processes)
add_subdirectory(06-multi-threading)
add_subdirectory(08-http-server-fantasy)