cmake_minimum_required(VERSION 3.5.1)

set(CMAKE_CXX_STANDARD 11)

# abbreviation for unix programming course
project(upc)

add_subdirectory(00-introduction)
add_subdirectory(02-file-operations)
add_subdirectory(03-sockets)
add_subdirectory(04-process-management)
add_subdirectory(05-multi-threading)
add_subdirectory(06-inter-process-communication)
add_subdirectory(07-projects)
